[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/GrippedSword.gd" type="Script" id=1]
[ext_resource path="res://Assets/Models/sword.obj" type="ArrayMesh" id=2]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 0.0182529, 0.0207867, 1.05923 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 0.0433467, 0.020787, 1.31715 )

[node name="GrippedSword" type="Spatial" index="0"]

transform = Transform( -1.31134e-008, 0.5, 0, -0.3, -2.18557e-008, 0, 0, 0, 0.6, 0, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="SwordGrip" type="Spatial" parent="." index="0"]

_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="SwordGrip" index="0"]

transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.039749, 0, -1.26538 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 2 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="BladeEdge" type="Area" parent="SwordGrip" index="1"]

transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.039749, 0, -1.26538 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="SwordGrip/BladeEdge" index="0"]

transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.0940934, 7.58792e-009, -0.184515 )
shape = SubResource( 1 )
disabled = false

[node name="BladeEnd" type="Area" parent="SwordGrip" index="2"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="SwordGrip/BladeEnd" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.019159, -8.37467e-010, -1.22888 )
shape = SubResource( 2 )
disabled = false

[connection signal="body_entered" from="SwordGrip/BladeEdge" to="." method="_on_BladeEdge_body_entered"]

[connection signal="body_exited" from="SwordGrip/BladeEdge" to="." method="_on_BladeEdge_body_exited"]

[connection signal="body_entered" from="SwordGrip/BladeEnd" to="." method="_on_BladeEnd_body_entered"]

[connection signal="body_exited" from="SwordGrip/BladeEnd" to="." method="_on_BladeEnd_body_exited"]


